--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,17 @@ on:
   pull_request:
   push:
   release:
-    types: [ created ]
+    types: [ published ]
+  workflow_dispatch:
 
 jobs:
 
   # Run a validation build on LTS versions of node.
-  validate-build:
+  build:
+    name: 'Build package'
 
-    # Build only if we've received a push event.
-    if: github.event_name == 'push'
+    # Build only if we've received a push, manual workflow dispatch, or release event with a release tag (aka v1.2.3).
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || (github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v'))
 
     # Create the build matrix for all the environments we're validating against.
     strategy:
@@ -29,10 +31,10 @@ jobs:
     # Execute the build activities.
     steps:
       - name: Checkout the repository.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup the node ${{ matrix.node-version }} environment.
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -45,6 +47,8 @@ jobs:
 
   # Publish the release to the NPM registry.
   publish-npm:
+    name: 'Publish package'
+    needs: build
 
     # Publish only if we've received a release event and the tag starts with "v" (aka v1.2.3).
     if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v')
@@ -55,10 +59,10 @@ jobs:
     # Execute the build and publish activities.
     steps:
     - name: Checkout the repository.
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Setup the node environment.
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
 
         # Use the oldest node LTS version that we support.
