--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unifi-access",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "displayName": "UniFi Access API",
   "description": "A soon-to-be-almost-complete implementation of the UniFi Access API.",
   "author": {
@@ -52,19 +52,20 @@
     "test": "eslint src/**.ts"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "2.6.1",
-    "@types/node": "22.1.0",
+    "@stylistic/eslint-plugin": "2.8.0",
+    "@types/node": "22.7.4",
     "@types/ws": "8.5.12",
-    "eslint": "9.8.0",
-    "homebridge-plugin-utils": "1.7.0",
+    "eslint": "9.11.1",
+    "homebridge": "^1.8.4",
+    "homebridge-plugin-utils": "1.9.0",
     "shx": "0.3.4",
-    "typedoc": "0.26.5",
-    "typedoc-plugin-markdown": "4.2.3",
-    "typescript": "5.5.4",
-    "typescript-eslint": "8.0.0"
+    "typedoc": "0.26.7",
+    "typedoc-plugin-markdown": "4.2.9",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.8.0"
   },
   "dependencies": {
-    "@adobe/fetch": "4.1.8",
+    "@adobe/fetch": "4.1.9",
     "ws": "8.18.0"
   },
   "optionalDependencies": {
