--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unifi-access",
   "type": "module",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "displayName": "UniFi Access API",
   "description": "A soon-to-be-almost-complete implementation of the UniFi Access API.",
   "author": {
@@ -23,6 +23,7 @@
     "ubiquiti",
     "unifi",
     "unifi access",
+    "unifi door access",
     "motion",
     "motion sensor",
     "security",
@@ -39,36 +40,39 @@
     "unifios"
   ],
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
+  },
+  "bin": {
+    "ufa": "dist/util/ufa.js"
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "shx rm -rf ./dist && tsc",
+    "build": "shx rm -rf ./dist && tsc && shx chmod a+x ./dist/util/**.js",
     "build-docs": "shx rm -f ./docs/[^CO]*.md && npx typedoc",
     "clean": "shx rm -rf ./dist",
-    "lint": "eslint --max-warnings=${ESLINT_MAX_WARNINGS:-\"-1\"} eslint.config.mjs src/**.ts",
+    "lint": "eslint --max-warnings=${ESLINT_MAX_WARNINGS:-\"-1\"} eslint.config.mjs src/**.ts src/util/**.ts",
     "postpublish": "npm run clean",
     "prepublishOnly": "npm run lint && npm run build && npm run build-docs",
     "test": "eslint src/**.ts"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "2.8.0",
-    "@types/node": "22.7.4",
-    "@types/ws": "8.5.12",
-    "eslint": "9.11.1",
-    "homebridge": "^1.8.4",
-    "homebridge-plugin-utils": "1.9.0",
-    "shx": "0.3.4",
-    "typedoc": "0.26.7",
-    "typedoc-plugin-markdown": "4.2.9",
-    "typescript": "5.6.2",
-    "typescript-eslint": "8.8.0"
+    "@stylistic/eslint-plugin": "4.4.0",
+    "@types/node": "22.15.23",
+    "@types/ws": "8.18.1",
+    "eslint": "9.27.0",
+    "homebridge": "^1.9.0",
+    "homebridge-plugin-utils": "^1.18.0",
+    "shx": "0.4.0",
+    "typedoc": "0.28.5",
+    "typedoc-plugin-markdown": "4.6.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.33.0"
   },
   "dependencies": {
-    "@adobe/fetch": "4.1.9",
-    "ws": "8.18.0"
+    "@adobe/fetch": "4.2.2",
+    "ws": "8.18.2"
   },
   "optionalDependencies": {
-    "bufferutil": "4.0.8"
+    "bufferutil": "4.0.9"
   }
 }
